DOCTYPE fix overflow

--- a/css/_leftMiddle.css
+++ b/css/_leftMiddle.css
@@ -5,6 +5,7 @@
   margin-right: 8px;
   padding: 8px;
   min-width: 300px;
+  max-width: 414px;
 }
 
 .topLeft {
@@ -84,6 +85,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 5px;
+  margin-top: 20px;
   width: calc(100% - 10px);
 }
 
@@ -116,7 +118,7 @@
   width: 80px;
   transition: 0.1s;
   margin: 15px;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 
 .languageButton:hover {
